--- a/app/views/careers/show.haml
+++ b/app/views/careers/show.haml
@@ -27,7 +27,7 @@
               = link_to job_path(job) do
                 Position Details
                 %span
-                  %small.p-left-5{"data-icon" => "k"}
+                  %small.p-left-5{"data-icon" => "p"}
 - mains = Main.all
   .strata.bgc-lghter-gray.jump-anchor
     .row
@@ -41,7 +41,7 @@
         %h5
           = link_to main.stratum_1_link do
             = main.stratum_1_cta
-            %span.h5-icon{ "data-icon" => "c"}
+            %span.h5-icon{ "data-icon" => "p"}
 .strata
   .row
     .small-12.medium-9.columns
@@ -50,4 +50,4 @@
     .small-12.medium-3.columns
       = link_to "mailto:recruiting@bloomconsultinggroup.com", :class => "btn btn-empty btn-m btn-block" do
         %span.btn-text Email Us
-        %span.btn-text.f-right{"data-icon" => "f"}
+        %span.btn-text.f-right{"data-icon" => "b"}
