--- a/app/views/layouts/_footer.haml
+++ b/app/views/layouts/_footer.haml
@@ -15,12 +15,12 @@
 					%li.footer-item
 						%h4
 							= link_to contact.last.linkedin, class: "footer-link", :target => "_blank" do
-								%span{"data-icon" => "i"}
+								%span{"data-icon" => "k"}
 				- if contact.last.twitter.present?
 					%li.footer-item
 						%h4
 							= link_to contact.last.twitter, class: "footer-link", :target => "_blank" do
-								%span{"data-icon" => "h"}
+								%span{"data-icon" => "l"}
 				- if contact.last.facebook.present?
 					%li.footer-item
 						%h4
