--- a/app/views/mains/_hiring_announcement.haml
+++ b/app/views/mains/_hiring_announcement.haml
@@ -9,4 +9,4 @@
       %h5
         = link_to @main.stratum_2_link, :class => "link-white" do
           = @main.stratum_2_cta
-          %span.h5-icon{ "data-icon" => "c"}
+          %span.h5-icon{ "data-icon" => "p"}
