--- a/app/views/mains/_practice_areas.haml
+++ b/app/views/mains/_practice_areas.haml
@@ -14,7 +14,7 @@
             %p.p-x-15= @main.practice_area_1_copy
             %span.bottom-line
               %h4
-                %span.c-orange{"data-icon" => "c"}
+                %span.c-orange{"data-icon" => "p"}
     .small-12.medium-4.columns
       = link_to practiceareas_path(anchor: "mc"), class: "anchor-link" do
         %div.b-light-gray{"data-equalizer-watch" => "true"}
@@ -26,7 +26,7 @@
             %p.p-x-15= @main.practice_area_2_copy
             %span.bottom-line
               %h4
-                %span.c-orange{"data-icon" => "c"}
+                %span.c-orange{"data-icon" => "p"}
     .small-12.medium-4.columns
       = link_to practiceareas_path(anchor: "bi"), class: "anchor-link" do
         %div.b-light-gray{"data-equalizer-watch" => "true"}
@@ -38,4 +38,4 @@
             %p.p-x-15= @main.practice_area_3_copy
             %span.bottom-line
               %h4
-                %span.c-orange{"data-icon" => "c"}
+                %span.c-orange{"data-icon" => "p"}
