--- a/app/views/mains/_quotes.haml
+++ b/app/views/mains/_quotes.haml
@@ -15,4 +15,4 @@
       %div.btn-c-318.center
         = link_to about_path(anchor: "quotes"), :class => "btn btn-filled btn-l btn-block" do
           %span.btn-text Read more
-          %span.btn-text.f-right{"data-icon" => "c"}
+          %span.btn-text.f-right{"data-icon" => "p"}
