--- a/app/views/mains/_top_announcement.haml
+++ b/app/views/mains/_top_announcement.haml
@@ -9,4 +9,4 @@
       %h5
         = link_to @main.stratum_1_link do
           = @main.stratum_1_cta
-          %span.h5-icon{ "data-icon" => "c"}
+          %span.h5-icon{ "data-icon" => "p"}
