--- a/app/views/mains/show.haml
+++ b/app/views/mains/show.haml
@@ -6,7 +6,7 @@
       .small-8.small-offset-2.columns
         %h1.hero-font= @main.hero_title
         %h2.intro-arrow-box
-          %a.intro-arrow.page-jump{"data-icon" => "b"}
+          %a.intro-arrow.page-jump{"data-icon" => "f"}
 
 = render 'top_announcement'
 = render 'practice_areas'
