--- a/app/assets/stylesheets/components/_typography.scss
+++ b/app/assets/stylesheets/components/_typography.scss
@@ -6,12 +6,13 @@
 
 .h5-icon { 
 	position: relative;
-	top: 4px;
+	top: 2px;
+  font-size: 1rem;
 }
 
 .p-icon {
   position: relative;
-  top: 3px;
+  top: 2px;
 }
 
 .lh-h1 {
@@ -29,5 +30,3 @@
 .lh-btn-m {
   line-height: 42px;
 }
-
-// Dirty TinyMCE fix
