--- a/app/views/insights/index.haml
+++ b/app/views/insights/index.haml
@@ -21,7 +21,7 @@
         - if insight.article.url.present?
           %div.p-top-20
             = link_to insight.article.url, class: "btn btn-empty btn-m ta-center", :target => "_Blank" do
-              %span.btn-text.p-right-5{"data-icon" => "a"}
+              %span.btn-text.p-right-5{"data-icon" => "c"}
               - if insight.article.url.end_with?(".ppt", ".pptx")
                 %span.btn-text Download Presentation
               - else
