--- a/app/views/mains/_meet_the_team.haml
+++ b/app/views/mains/_meet_the_team.haml
@@ -15,4 +15,4 @@
         %div.btn-c-318.center
           = link_to team_path, :class => "btn btn-filled btn-l btn-block" do
             %span.btn-text Meet Us All
-            %span.btn-text.f-right{"data-icon" => "c"}
+            %span.btn-text.f-right{"data-icon" => "p"}
