--- a/app/views/admin/practiceareas/_form.html.erb
+++ b/app/views/admin/practiceareas/_form.html.erb
@@ -32,12 +32,67 @@
     <%= f.text_area :pa1_copy, :class => "tinymce", :id => "editor", :rows => 30, :cols => 80 %>
   </div>
   <div class="field">
+    <%= f.label :marketing_services_title %><br>
+    <%= f.text_field :marketing_services_title %>
+  </div>
+  <div class="field">
+    <%= f.label :marketing_services_copy %><br>
+    <%= f.text_area :marketing_services_copy, :class => "tinymce", :id => "marketing", :rows => 10, :cols => 80 %>
+  </div>
+  <div class="field">
+    <%= f.label :sales_services_title %><br>
+    <%= f.text_field :sales_services_title %>
+  </div>
+  <div class="field">
+    <%= f.label :sales_services_copy %><br>
+    <%= f.text_area :sales_services_copy, :class => "tinymce", :id => "sales", :rows => 10, :cols => 80 %>
+  </div>
+  <div class="field">
+    <%= f.label :channel_services_title %><br>
+    <%= f.text_field :channel_services_title %>
+  </div>
+  <div class="field">
+    <%= f.label :channel_services_copy %><br>
+    <%= f.text_area :channel_services_copy, :class => "tinymce", :id => "channel", :rows => 10, :cols => 80 %>
+  </div>
+  <div class="field">
+    <%= f.label :bi_services_title %><br>
+    <%= f.text_field :bi_services_title %>
+  </div>
+  <div class="field">
+    <%= f.label :bi_services_copy %><br>
+    <%= f.text_area :bi_services_copy, :class => "tinymce", :id => "bi", :rows => 10, :cols => 80 %>
+  </div>
+  <div class="field">
     <%= f.label :pa2_title %><br>
     <%= f.text_field :pa2_title %>
   </div>
   <div class="field">
     <%= f.label :pa2_copy %><br>
     <%= f.text_area :pa2_copy, :class => "tinymce", :id => "editor2", :rows => 30, :cols => 80 %>
+  </div>
+  <div class="field">
+    <%= f.label :pm_process_groups_title %><br>
+    <%= f.text_field :pm_process_groups_title %>
+  </div>
+  <div class="field">
+    <%= f.label :pm_process_groups_copy %><br>
+    <%= f.text_area :pm_process_groups_copy, :class => "tinymce", :id => "pm-process", :rows => 10, :cols => 80 %>
+  </div>
+  <div class="field">
+    <%= f.label :pm_knowledge_title %><br>
+    <%= f.text_field :pm_knowledge_title %>
+  </div>
+  <div class="field">
+    <%= f.label :pm_knowledge_copy %><br>
+    <%= f.text_area :pm_knowledge_copy, :class => "tinymce", :id => "pm-knowledge", :rows => 10, :cols => 80 %>
+  </div>
+    <%= f.label :pm_deliverables_title %><br>
+    <%= f.text_field :pm_deliverables_title %>
+  </div>
+  <div class="field">
+    <%= f.label :pm_deliverables_copy %><br>
+    <%= f.text_area :pm_deliverables_copy, :class => "tinymce", :id => "pm-deliverables", :rows => 10, :cols => 80 %>
   </div>
   <div class="field">
     <%= f.label :pa3_title %><br>
