JJ: adding in missing div

--- a/app/views/admin/practiceareas/_form.html.erb
+++ b/app/views/admin/practiceareas/_form.html.erb
@@ -87,6 +87,7 @@
     <%= f.label :pm_knowledge_copy %><br>
     <%= f.text_area :pm_knowledge_copy, :class => "tinymce", :id => "pm-knowledge", :rows => 10, :cols => 80 %>
   </div>
+  <div class="field">
     <%= f.label :pm_deliverables_title %><br>
     <%= f.text_field :pm_deliverables_title %>
   </div>
