JJ: continue the sexing up

--- a/app/assets/stylesheets/base/iconfonts/_streamline.css
+++ b/app/assets/stylesheets/base/iconfonts/_streamline.css
@@ -89,3 +89,24 @@
 .bloom-arrow-54:before {
   content: "q";
 }
+.bloom-hotspot-2:before {
+  content: "r";
+}
+.bloom-abacus:before {
+  content: "s";
+}
+.bloom-network-2:before {
+  content: "t";
+}
+.bloom-chart-board:before {
+  content: "u";
+}
+.bloom-list-2:before {
+  content: "v";
+}
+.bloom-lightbulb-2:before {
+  content: "x";
+}
+.bloom-hand-file-2:before {
+  content: "w";
+}
