--- a/app/views/practiceareas/show.haml
+++ b/app/views/practiceareas/show.haml
@@ -31,17 +31,25 @@
     .small-12.medium-7.columns
       %p= raw @practicearea.pa1_copy
       - if @practicearea.marketing_services_title.present?
-        %h6.c-white.m-top-30.bgc-blue.p-15= @practicearea.marketing_services_title
-        .p-top-10= raw @practicearea.marketing_services_copy
+        %h6.c-white.m-top-30.bgc-blue.p-15
+          %span.m-right-10.h5-icon{"data-icon" => "r"}
+          = @practicearea.marketing_services_title
+        .p-top-20.p-left-10= raw @practicearea.marketing_services_copy
       - if @practicearea.sales_services_title.present?
-        %h6.c-white.m-top-30.bgc-blue.p-15= @practicearea.sales_services_title
-        .p-top-10= raw @practicearea.sales_services_copy
+        %h6.c-white.m-top-30.bgc-blue.p-15
+          %span.m-right-10.h5-icon{"data-icon" => "s"}
+          = @practicearea.sales_services_title
+        .p-top-20.p-left-10= raw @practicearea.sales_services_copy
       - if @practicearea.channel_services_title.present?
-        %h6.c-white.m-top-30.bgc-blue.p-15= @practicearea.channel_services_title
-        .p-top-10= raw @practicearea.channel_services_copy
+        %h6.c-white.m-top-30.bgc-blue.p-15
+          %span.m-right-10.h5-icon{"data-icon" => "t"}
+          = @practicearea.channel_services_title
+        .p-top-20.p-left-10= raw @practicearea.channel_services_copy
       - if @practicearea.bi_services_title.present?
-        %h6.c-white.m-top-30.bgc-blue.p-15= @practicearea.bi_services_title
-        .p-top-10= raw @practicearea.bi_services_copy
+        %h6.c-white.m-top-30.bgc-blue.p-15
+          %span.m-right-10.h5-icon{"data-icon" => "u"}
+          = @practicearea.bi_services_title
+        .p-top-20.p-left-10= raw @practicearea.bi_services_copy
       - success = Success.where(:businessconsulting => true)
       - if success.present?
         %h6.c-white.m-top-30.bgc-blue.p-15
@@ -63,14 +71,20 @@
     .small-12.medium-7.columns
       %p= raw @practicearea.pa2_copy
       - if @practicearea.pm_process_groups_title.present?
-        %h6.c-white.m-top-30.bgc-blue.p-15= @practicearea.pm_process_groups_title
-        .p-top-10= raw @practicearea.pm_process_groups_copy
+        %h6.c-white.m-top-30.bgc-blue.p-15
+          %span.m-right-10.h5-icon{"data-icon" => "v"}
+          = @practicearea.pm_process_groups_title
+        .p-top-20.p-left-10= raw @practicearea.pm_process_groups_copy
       - if @practicearea.pm_knowledge_title.present?
-        %h6.c-white.m-top-30.bgc-blue.p-15= @practicearea.pm_knowledge_title
-        .p-top-10= raw @practicearea.pm_knowledge_copy
+        %h6.c-white.m-top-30.bgc-blue.p-15
+          %span.m-right-10.h5-icon{"data-icon" => "x"}
+          = @practicearea.pm_knowledge_title
+        .p-top-20.p-left-10= raw @practicearea.pm_knowledge_copy
       - if @practicearea.pm_deliverables_title.present?
-        %h6.c-white.m-top-30.bgc-blue.p-15= @practicearea.pm_deliverables_title
-        .p-top-10= raw @practicearea.pm_deliverables_copy
+        %h6.c-white.m-top-30.bgc-blue.p-15
+          %span.m-right-10.h5-icon{"data-icon" => "w"}
+          = @practicearea.pm_deliverables_title
+        .p-top-20.p-left-10= raw @practicearea.pm_deliverables_copy
       - success = Success.where(:projectmanagement => true)
       - if success.present?
         %h6.c-white.m-top-30.bgc-blue.p-15
