--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -2,8 +2,7 @@
   .row.nav-inner
     .small-4.columns
       = link_to root_path do
-        %img
-        =image_tag "https://s3-us-west-2.amazonaws.com/bloom-site-images/bloom-logo-small.svg", style: "max-height: 40px;"
+        %img{src: "https://s3-us-west-2.amazonaws.com/bloom-site-images/bloom-logo-small.svg", style: "max-height: 40px;"}
     .small-8.columns
       %ul.l-no-style.f-right
         %li.nav-item
