JJ: make smooth back to top link for long pages

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -55,3 +55,12 @@
 	}
 }
 
+.back-to-top {
+	display: none;
+	position:	fixed;
+	right: 0px;
+	bottom: 40px;
+	background-color: $bloom-orange;
+	padding: 10px;
+	z-index: 99;
+}
