--- a/app/views/abouts/show.haml
+++ b/app/views/abouts/show.haml
@@ -1,5 +1,5 @@
 - image = @about.hero_image_url(:thumb)
-.large-hero.fixed-image{style: "background-image: url(#{image});"}
+.large-hero.fixed-image#top{style: "background-image: url(#{image});"}
   = render 'layouts/header'
   .hero
     .row
@@ -8,6 +8,11 @@
           = @about.hero_title
         %p.ta-center.p-top-15.c-white.p-bottom-80
           = @about.hero_copy
+= link_to "#top" do
+  .back-to-top
+    %h6.c-white.m-right-20 
+      %span.m-right-5.h5-icon{"data-icon" => "i"}
+      Back To Top
 .strata-small.bgc-lghter-gray.b-bottom-light-gray.w-100.p-relative{"data-magellan-expedition" => "fixed"}
   .row
     .small-12.medium-9.columns
