--- a/app/assets/stylesheets/base/iconfonts/_streamline.css
+++ b/app/assets/stylesheets/base/iconfonts/_streamline.css
@@ -2,14 +2,13 @@
 
 @font-face {
   font-family: "bloom-consulting-group";
-  src:url(font_path('bloom-consulting-group.eot'));
-  src:url(font_path('bloom-consulting-group.eot') + "?#iefix") format("embedded-opentype"),
-    url(font_path('bloom-consulting-group.woff')) format("woff"),
-    url(font_path('bloom-consulting-group.ttf')) format("truetype"),
-    url(font_path('bloom-consulting-group.svg') + "#bloom-consulting-group") format("svg");
+  src:url("icon_fonts/bloom-consulting-group.eot");
+  src:url("icon_fonts/bloom-consulting-group.eot?#iefix") format("embedded-opentype"),
+    url("icon_fonts/bloom-consulting-group.ttf") format("truetype"),
+    url("icon_fonts/bloom-consulting-group.svg#bloom-consulting-group") format("svg"),
+    url("icon_fonts/bloom-consulting-group.woff") format("woff");
   font-weight: normal;
   font-style: normal;
-
 }
 
 [data-icon]:before {
