--- a/app/views/mains/_top_announcement.haml
+++ b/app/views/mains/_top_announcement.haml
@@ -1,9 +1,9 @@
 .strata.bgc-lghter-gray.jump-anchor
   .row
-    .small-12.medium-3.columns
+    .small-12.medium-2.columns
       %div.ta-center
-        = image_tag @main.stratum_1_image_url(:thumb).to_s, class: "circle-thumb b-gray"
-    .small-12.medium-9.columns
+        = image_tag('bloom-leaf-orange.svg', style: "max-height: 130px;")
+    .small-12.medium-10.columns
       %h4.c-drk-gray= @main.stratum_1_title
       %p.c-drk-gray.p-top-10= @main.stratum_1_copy
       %h5
