--- a/app/assets/stylesheets/components/_strata.scss
+++ b/app/assets/stylesheets/components/_strata.scss
@@ -15,3 +15,9 @@
   height: 100%;
   background-color: rgba(31,73,125,0.4);
 }
+
+.orange-overlay {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(227,121,41,0.4);
+}
