--- a/app/views/careers/show.haml
+++ b/app/views/careers/show.haml
@@ -28,7 +28,7 @@
                 Position Details
                 %span
                   %small.p-left-5{"data-icon" => "p"}
-.strata
+.strata#events
   .row
     .small-12.columns
       %h3.c-blue Upcoming Recruiting Events
@@ -49,7 +49,7 @@
           %td Business School Job Fair
           %td May 14th, 2014
           %td{style: "text-align: right;"}
-.strata
+.strata.bgc-lghter-gray
   .row
     .small-12.medium-9.columns
       %h6.c-drk-gray= @career.cta_title
