JJ: add about contact us button

--- a/app/views/abouts/show.haml
+++ b/app/views/abouts/show.haml
@@ -24,6 +24,10 @@
       %h6.d-inline-block.p-left-5.c-lght-gray.lh-btn-m.m-bottom-0 &#124;
       %h6.target-jump.d-inline-block.p-left-5.m-bottom-0.lh-btn-m{"data-target" => "quotes"}
         %a= @about.area3_title
+    .small-12.medium-3.columns
+      = link_to contact_path, class: "btn btn-empty btn-m btn-block" do
+        %span.btn-text Contact Us
+        %span.btn-text.f-right{"data-icon" => "p"}
 #co.clear-nav-anchor    
 .strata
   .row
