--- a/app/views/careers/show.haml
+++ b/app/views/careers/show.haml
@@ -28,7 +28,7 @@
                 Position Details
                 %span
                   %small.p-left-5{"data-icon" => "p"}
-.strata#events
+.strata.p-top-0#events
   .row
     .small-12.columns
       %h3.c-blue Upcoming Recruiting Events
