--- a/app/views/admin/practiceareas/_form.html.erb
+++ b/app/views/admin/practiceareas/_form.html.erb
@@ -103,6 +103,14 @@
     <%= f.label :pa3_copy %><br>
     <%= f.text_area :pa3_copy, :class => "tinymce", :id => "editor3", :rows => 30, :cols => 80 %>
   </div>
+  <div class="field">
+    <%= f.label :bifocus_title %><br>
+    <%= f.text_field :bifocus_title %>
+  </div>
+  <div class="field">
+    <%= f.label :bifocus_copy %><br>
+    <%= f.text_area :bifocus_copy, :class => "tinymce", :id => "bifocus", :rows => 10, :cols => 80 %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
