created events in admin

--- a/app/views/admin/careers/index.html.erb
+++ b/app/views/admin/careers/index.html.erb
@@ -10,6 +10,8 @@
       <th>Intro copy</th>
       <th>Cta title</th>
       <th>Cta copy</th>
+      <th>Event Title</th>
+      <th>Event Intro</th>
       <th></th>
       <th></th>
       <th></th>
@@ -26,6 +28,8 @@
         <td><%= career.intro_copy %></td>
         <td><%= career.cta_title %></td>
         <td><%= career.cta_copy %></td>
+        <td><%= career.event_header %></td>
+        <td><%= career.event_intro %></td>
         <td><%= link_to 'Edit', edit_admin_career_path(career) %></td>
       </tr>
     <% end %>
