--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -14,4 +14,5 @@
 	<li><%= link_to 'Manage Contact Us', edit_admin_contact_path(1) %></li>
 	<li><%= link_to 'Manage Success Stories', admin_successes_path %></li>
 	<li><%= link_to 'Manage Quotes', admin_quotes_path %></li>
+	<li><%= link_to 'Manage Events', admin_events_path %></li>
 </ul>
