--- a/app/views/admin/careers/_form.html.erb
+++ b/app/views/admin/careers/_form.html.erb
@@ -39,6 +39,14 @@
     <%= f.label :cta_copy %><br>
     <%= f.text_area :cta_copy %>
   </div>
+  <div class="field">
+    <%= f.label :event_header %><br>
+    <%= f.text_field :event_header %>
+  </div>
+  <div class="field">
+    <%= f.label :event_intro %><br>
+    <%= f.text_area :event_intro %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
