--- a/app/assets/stylesheets/components/_thumbnails.scss
+++ b/app/assets/stylesheets/components/_thumbnails.scss
@@ -2,3 +2,25 @@
 	border-radius: 50%;
 }
 
+.th:hover, .th:focus {
+  box-shadow: 0 0 6px 1px rgba(227, 121, 41, 0.5); }
+
+.clearing-main-prev > span,
+.clearing-main-next > span {
+  border-color: transparent;
+  border-right-color: transparent;
+  border: solid 0px;
+}
+
+.clearing-main-prev > span {
+  left: 20px;
+}
+
+.clearing-main-prev > span:hover,
+.clearing-main-next > span:hover {
+  opacity: 0.8; 
+}
+
+.clearing-assembled .clearing-container .carousel {
+  margin-top: 0px;
+}
