--- a/app/views/abouts/show.haml
+++ b/app/views/abouts/show.haml
@@ -32,7 +32,14 @@
 .strata
   .row
     .small-12.medium-5.columns
-      %h3.c-blue= @about.area1_title
+      %h3.c-blue.m-bottom-10= @about.area1_title
+      %ul.clearing-thumbs.small-block-grid-4{"data-clearing" => "true"}
+        %li
+          %a.th{href: "/assets/team/braden-unger.jpg"}
+            %img{src: "/assets/team/braden-unger.jpg"}
+        %li
+          %a.th{href: "/assets/team/amber-cooley.jpg"}
+            %img{src: "/assets/team/amber-cooley.jpg"}
     .small-12.medium-7.columns
       %p= raw @about.area1_copy
 %hr
