--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -15,4 +15,6 @@
 	<li><%= link_to 'Manage Success Stories', admin_successes_path %></li>
 	<li><%= link_to 'Manage Quotes', admin_quotes_path %></li>
 	<li><%= link_to 'Manage Events', admin_events_path %></li>
+	<li><%= link_to 'Manage Carousels', admin_carousels_path %></li>
+
 </ul>
