--- a/app/views/abouts/show.haml
+++ b/app/views/abouts/show.haml
@@ -35,10 +35,12 @@
     .small-12.medium-5.columns
       %h3.c-blue.m-bottom-10= @about.area1_title
       %ul.clearing-thumbs.small-block-grid-4{"data-clearing" => "true"}
-        - employees.each do |employee|
-          %li
-            %a.th{href: employee.employee_image.profile}
-              = image_tag employee.employee_image.thumb
+        - carousel = Carousel.where(:overview => true)
+        - if carousel.present?
+          - carousel.each do |carousel|
+            %li
+              %a.th{href: carousel.carousel_image}
+                = image_tag carousel.carousel_image.thumb
     .small-12.medium-7.columns
       %p= raw @about.area1_copy
 %hr
@@ -47,6 +49,13 @@
   .row
     .small-12.medium-5.columns
       %h3.c-blue= @about.area2_title
+      %ul.clearing-thumbs.small-block-grid-4{"data-clearing" => "true"}
+        - carousel = Carousel.where(:culture => true)
+        - if carousel.present?
+          - carousel.each do |carousel|
+            %li
+              %a.th{href: carousel.carousel_image}
+                = image_tag carousel.carousel_image.thumb
     .small-12.medium-7.columns
       %p= raw @about.area2_copy
 - if @about.area3_title.present?
