--- a/app/views/practiceareas/show.haml
+++ b/app/views/practiceareas/show.haml
@@ -34,6 +34,13 @@
   .row
     .small-12.medium-5.columns
       %h3.c-blue= @practicearea.pa1_title
+      %ul.clearing-thumbs.small-block-grid-4{"data-clearing" => "true"}
+        - carousel = Carousel.where(:consulting => true)
+        - if carousel.present?
+          - carousel.each do |carousel|
+            %li
+              %a.th{href: carousel.carousel_image}
+                = image_tag carousel.carousel_image.thumb
     .small-12.medium-7.columns
       %p= raw @practicearea.pa1_copy
       - if @practicearea.marketing_services_title.present?
@@ -74,6 +81,13 @@
   .row
     .small-12.medium-5.columns
       %h3.c-blue= @practicearea.pa2_title
+      %ul.clearing-thumbs.small-block-grid-4{"data-clearing" => "true"}
+        - carousel = Carousel.where(:pm => true)
+        - if carousel.present?
+          - carousel.each do |carousel|
+            %li
+              %a.th{href: carousel.carousel_image}
+                = image_tag carousel.carousel_image.thumb
     .small-12.medium-7.columns
       %p= raw @practicearea.pa2_copy
       - if @practicearea.pm_process_groups_title.present?
@@ -109,6 +123,13 @@
   .row
     .small-12.medium-5.columns
       %h3.c-blue= @practicearea.pa3_title
+      %ul.clearing-thumbs.small-block-grid-4{"data-clearing" => "true"}
+        - carousel = Carousel.where(:bi => true)
+        - if carousel.present?
+          - carousel.each do |carousel|
+            %li
+              %a.th{href: carousel.carousel_image}
+                = image_tag carousel.carousel_image.thumb
     .small-12.medium-7.columns
       %p= raw @practicearea.pa3_copy
       - if @practicearea.bifocus_title.present?
