add recruiting boolean to carousels

--- a/app/views/admin/carousels/_form.html.erb
+++ b/app/views/admin/carousels/_form.html.erb
@@ -39,6 +39,10 @@
     <%= f.label :bi %><br>
     <%= f.check_box :bi %>
   </div>
+  <div>
+    <%= f.label :recruiting %><br>
+    <%= f.check_box :recruiting %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
