--- a/app/views/admin/carousels/index.html.erb
+++ b/app/views/admin/carousels/index.html.erb
@@ -10,6 +10,7 @@
       <th>Business Consulting</th>
       <th>Project Management</th>
       <th>Business Intelligence</th>
+      <th>Recruiting</th>
       <th></th>
       <th></th>
       <th></th>
@@ -26,6 +27,7 @@
         <td><%= carousel.consulting %></td>
         <td><%= carousel.pm %></td>
         <td><%= carousel.bi %></td>
+        <td><%= carousel.recruiting %></td>
         <td><%= link_to 'Edit', edit_admin_carousel_path(carousel) %></td>
         <td><%= link_to 'Delete', admin_carousel_path(carousel), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       <% end %>
