--- a/app/views/careers/show.haml
+++ b/app/views/careers/show.haml
@@ -48,6 +48,16 @@
                 Event Info
                 %span
                   %small.p-left-5{"data-icon" => "p"}
+  .row.m-top-10
+    .small-12.columns
+      %p Here are some images from past recruiting events:
+      %ul.clearing-thumbs.medium-block-grid-6{"data-clearing" => "true"}
+        - carousel = Carousel.where(:recruiting => true)
+        - if carousel.present?
+          - carousel.each do |carousel|
+            %li
+              %a.th{href: carousel.carousel_image}
+                = image_tag carousel.carousel_image.thumb, "data-caption" => carousel.title
 
 .strata.bgc-lghter-gray
   .row
