--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,8 @@
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 	</script>
+	<link rel="shortcut icon" href="https://s3-us-west-2.amazonaws.com/bcg-site-assets/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="https://s3-us-west-2.amazonaws.com/bcg-site-assets/favicon.ico" type="image/x-icon">
 </head>
 <body>
 <div class="container"><%= yield %></div>
