analytics and css fix

--- a/app/assets/stylesheets/modules/_tables.scss
+++ b/app/assets/stylesheets/modules/_tables.scss
@@ -26,6 +26,6 @@
 	text-align: right;
 }
 
-.strata-striped:nth-child(odd) {
+.strata-striped:nth-child(even) {
   background-color: $lighter-gray;
 }
