updated success title color

--- a/app/views/successes/index.haml
+++ b/app/views/successes/index.haml
@@ -5,7 +5,7 @@
 .strata-small
   .row.p-top-30
     .small-12.columns
-      %h1.c-drk-gray Success Stories
+      %h1.c-blue Success Stories
 - success = Success.all
 - success.each do |success|
   .strata.strata-striped
